--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mlc-ai/web-llm": "^0.2.79",
     "@xenova/transformers": "^2.17.2",
     "next": "15.4.6",
     "react": "19.1.0",
